--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -12,9 +11,10 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "types": ["jest"],
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "my-lib": ["dist/my-lib/my-lib", "dist/my-lib"]
+    }
   }
 }
