--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-lib",
+  "name": "@pritzpackages/my-lib",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.0.9",
